few design changes

--- a/CS4440/Main.storyboard
+++ b/CS4440/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XBB-K9-Fqz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XBB-K9-Fqz">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,79 +15,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="scr-gE-adk">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="scr-gE-adk">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="85D-dL-O9M">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="278" placeholderIntrinsicHeight="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JQM-Oo-RJA">
-                                                <rect key="frame" x="76.5" y="69" width="278" height="25"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="25" id="gVT-Fd-aBy"/>
-                                                </constraints>
-                                                <edgeInsets key="layoutMargins" top="25" left="8" bottom="8" right="8"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Predict stock performance!">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="predictPressed:" destination="XBB-K9-Fqz" eventType="touchUpInside" id="ZTJ-CL-6om"/>
-                                                </connections>
-                                            </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="108" placeholderIntrinsicHeight="200" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="131" translatesAutoresizingMaskIntoConstraints="NO" id="oaY-4W-dVJ" propertyAccessControl="localizable">
-                                                <rect key="frame" x="161.5" y="149" width="108" height="158"/>
-                                                <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.34999999999999998"/>
-                                                <edgeInsets key="layoutMargins" top="2" left="2" bottom="2" right="2"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                                <size key="shadowOffset" width="0.0" height="0.0"/>
-                                            </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="100" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type a stock name or twitter handle...." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B2y-nu-cpD">
-                                                <rect key="frame" x="25" y="362" width="381" height="100"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="hkS-ON-N9D"/>
-                                                </constraints>
-                                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="B2y-nu-cpD" firstAttribute="leading" secondItem="85D-dL-O9M" secondAttribute="leading" id="KIm-6a-YJy"/>
-                                            <constraint firstAttribute="trailing" secondItem="B2y-nu-cpD" secondAttribute="trailing" id="Ppm-2M-AKz"/>
-                                        </constraints>
-                                        <directionalEdgeInsets key="directionalLayoutMargins" top="25" leading="25" bottom="400" trailing="8"/>
-                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" placeholderIntrinsicWidth="278" placeholderIntrinsicHeight="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JQM-Oo-RJA">
+                                        <rect key="frame" x="74" y="661" width="278" height="104"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <edgeInsets key="layoutMargins" top="25" left="8" bottom="8" right="8"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <state key="normal" title="Predict stock performance">
+                                            <color key="titleColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="predictPressed:" destination="XBB-K9-Fqz" eventType="touchUpInside" id="ZTJ-CL-6om"/>
+                                        </connections>
+                                    </button>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bTA-1O-xyo">
+                                        <rect key="frame" x="68" y="93" width="290" height="247"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="100" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type a stock name or twitter handle...." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B2y-nu-cpD">
+                                        <rect key="frame" x="0.0" y="473" width="414" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="85D-dL-O9M" secondAttribute="trailing" id="8D0-Ex-kNA"/>
-                                    <constraint firstItem="85D-dL-O9M" firstAttribute="leading" secondItem="scr-gE-adk" secondAttribute="leading" id="T8D-px-IqN"/>
-                                    <constraint firstItem="85D-dL-O9M" firstAttribute="top" secondItem="scr-gE-adk" secondAttribute="top" id="l8J-Z7-UUn"/>
-                                    <constraint firstAttribute="bottom" secondItem="85D-dL-O9M" secondAttribute="bottom" id="t63-vT-d1H"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="scr-gE-adk" firstAttribute="trailing" secondItem="2nh-kF-pWO" secondAttribute="trailing" id="P5W-yM-LLs"/>
-                            <constraint firstItem="scr-gE-adk" firstAttribute="bottom" secondItem="2nh-kF-pWO" secondAttribute="bottom" id="QkG-JZ-jGY"/>
-                            <constraint firstItem="scr-gE-adk" firstAttribute="top" secondItem="QwD-us-Dbc" secondAttribute="top" id="j92-yN-Lcv"/>
-                            <constraint firstItem="scr-gE-adk" firstAttribute="leading" secondItem="2nh-kF-pWO" secondAttribute="leading" id="vMe-Qk-1tS"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="2nh-kF-pWO"/>
                     </view>
                     <connections>
                         <outlet property="backgroundView" destination="scr-gE-adk" id="HXe-Ha-Hvx"/>
-                        <outlet property="sentimentLabel" destination="oaY-4W-dVJ" id="6DS-gE-7PY"/>
+                        <outlet property="predictB" destination="JQM-Oo-RJA" id="eZx-ic-WlA"/>
+                        <outlet property="sentimentLabel" destination="bTA-1O-xyo" id="4gl-NP-RTa"/>
                         <outlet property="textField" destination="B2y-nu-cpD" id="hDR-z7-W56"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QsJ-r5-qtk" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+            <point key="canvasLocation" x="136.23188405797103" y="133.25892857142856"/>
         </scene>
     </scenes>
 </document>
